--- a/HTML/Day2/forms.html
+++ b/HTML/Day2/forms.html
@@ -15,24 +15,28 @@
             <input type="password" name="pwd" id="pwd" placeholder="password" required>
         </div><br>
         <div>
-            <label for="price">Price</label>
-            <select name="price" id="price">
-                <option value="1">10$</option>
-                <option value="2">20$</option>
-                <option value="3">30$</option>
+            <label for="gender">Gender</label>
+            <select name="gender" id="gender">
+                <option value="m">Male</option>
+                <option value="f">Female</option>
+                <option value="o">Others</option>
             </select>
         </div><br>
         <div>
             <label>Membership</label>
-            <input type="radio" name="plus">plus
+            <input type="radio" name="plus">Free
             <input type="radio" name="plus">pro
-            <input type="radio" name="plus">ultra
+            <input type="radio" name="plus">ultra pro
         </div><br>
         <div>
             <label>Membership</label>
             <input type="checkbox" name="plus">plus
             <input type="checkbox" name="plus">pro
             <input type="checkbox" name="plus">ultra
+        </div><br>
+        <div>
+            <label for="dob">DOB</label>
+            <input type="date" name="dob" id="dob">
         </div><br>
         <div>
             <label for="message">Message</label>
