css initial commit

--- a/CSS/Day1/css.html
+++ b/CSS/Day1/css.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--3rd method-->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <!--first method-->
     <p style="color: burlywood;">I am a web developer</p>
+    <!--Second method-->
+    <h3>I am a web developer</h3>
+    <h3>Another line with style</h3>
+    <style>
+        h3 {
+            color: cadetblue;
+        }
+    </style>
+
+    <!--3rd method-->
+    <h4>
+        I am a HTML/CSS Developer
+    </h4>
 </body>
 
 </html>
