Work In Progress

--- a/CSS/Day3/citisite-app.html
+++ b/CSS/Day3/citisite-app.html
@@ -29,6 +29,30 @@
             </li>
         </ul>
     </nav>
+    <header class="header">
+        <div>
+            <h1 class="head-text1">Citi Site Build your website.</h1>
+            <p class="p-text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="btn">Join Us</button>
+        </div>
+    </header>
+    <section id="Services" class="container">
+        <div class="cards">
+            <i class="fas fa-user-friends fa-3x"></i>
+            <h3 class="h3-text">Creative team</h3>
+            <p class="cards-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="cards">
+            <i class="fas fa-tools fa-3x"></i>
+            <h3 class="h3-text">Useful features</h3>
+            <p class="cards-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="cards">
+            <i class="fas fa-headset fa-3x"></i>
+            <h3 class="h3-text">24/7 support</h3>
+            <p class="cards-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </section>
 </body>
 
 </html>
