--- a/Bootstrap/Day2/2-container-row-column.html
+++ b/Bootstrap/Day2/2-container-row-column.html
@@ -12,8 +12,12 @@
         #green {
             background-color: aquamarine;
         }
+        
+        #red {
+            background-color: red;
+        }
     </style>
-    <title>Day2</title>
+    <title>Basic Grid System</title>
 </head>
 
 <body>
@@ -50,8 +54,46 @@
             <div class="col-lg-6 bg-danger text-white">row1-col2</div>
             <div class="col-lg-4 bg-secondary text-white">row2-col1</div>
         </div>
-    </div>
 
+        <h1>nested column</h1>
+        <div class="container-fluid" id="green">
+            <div class="row" id="red">
+                <div class="col-lg-4 bg-primary text-white">col-4</div>
+                <div class="col-lg-8 bg-secondary text-white">col-8
+                    <div class="row">
+                        <div class="col-lg-4 bg-success">div1</div>
+                        <div class="col-lg-4 bg-warning">div2</div>
+                        <div class="col-lg-4 bg-info">div3</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!-- shortcuts to use col-->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col bg-primary">shortcut</div>
+            <div class="col bg-secondary">shortcut</div>
+            <div class="col bg-warning">shortcut</div>
+        </div>
+    </div>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col bg-primary">shortcut</div>
+            <div class="col-8 bg-secondary">shortcut</div>
+            <div class="col bg-warning">shortcut</div>
+        </div>
+    </div>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col bg-primary">shortcut</div>
+            <div class="col-auto bg-secondary">This is div 2</div>
+            <div class="col bg-warning">shortcut</div>
+        </div>
+    </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
